# nucleus

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
clients/csharp/: README.md
clients/csharp/Nucleus.Client/: Models.cs  Nucleus.Client.csproj  NucleusClient.cs  README.md  Scopes.cs
clients/csharp/Nucleus.Native/: Models.cs  Nucleus.Native.csproj  NucleusNative.cs
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: index.ts
crates/core/: Cargo.toml  README.md
crates/core/benches/: README.md  index.rs  ingest.rs  rerank.rs  search.rs
crates/core/examples/: index_footprint.rs  ingest_fiscal.rs  mint_token.rs  prefetch_model.rs  rerank_ab.rs
crates/core/src/: auth.rs  backup.rs  batch.rs  chunking.rs  crypto.rs  engine.rs  error.rs  id.rs  lib.rs  rerank.rs  util.rs
crates/core/src/embed/: local.rs  mock.rs  mod.rs
crates/core/src/extract/: mod.rs
crates/core/src/index/: flat.rs  hnsw.rs  lexical.rs  mod.rs  sq.rs
crates/core/src/jobs/: mod.rs
crates/core/src/model/: chunk.rs  document.rs  domain.rs  mod.rs  subdomain.rs  tag.rs
crates/core/src/query/: mod.rs
crates/core/src/storage/: codec.rs  mod.rs
crates/core/tests/: engine_integration.rs  performance.rs
crates/ffi/: Cargo.toml
crates/ffi/include/: nucleus.h
crates/ffi/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  backup_sink.rs  dashboard.html  main.rs  rate_limit.rs  ratelimit.rs  routes.rs
docs/: api.md  arquitectura.md  camino-a-1.0.md  compatibilidad-esquema.md  conceptos.md  configuracion.md  debugging.md  dossier-tecnico.md  guia-rapida.md  instalacion.md  integrations.md  lenguaje-consulta.md  nuget.md  openapi.yaml  operacion.md  rendimiento.md  resumen-defensa.md  roadmap.md  security.md  testing.md
docs/examples/: ingesta-masiva.md  pipeline-rag.md
examples/: README.md
examples/csharp/NucleusBlazor/: App.razor  NucleusBlazor.csproj  NucleusService.cs  Program.cs  Routes.razor  _Imports.razor
examples/csharp/NucleusBlazor/Pages/: Home.razor
examples/csharp/NucleusBlazor/Properties/: launchSettings.json
examples/csharp/NucleusDemo/: NucleusDemo.csproj  Program.cs
examples/ffi-smoke/: Program.cs  ffi-smoke.csproj
examples/javascript/browser/: index.html
examples/javascript/node/: demo.mjs  package-lock.json  package.json  upload.mjs
packaging/: README.md  build-dll.ps1  build-lib.sh  build-release.ps1  build-release.sh  dll-README.md  install.ps1  nucleus.service
scripts/: loadtest.mjs
