[package]
name = "nucleus-core"
description = "Core engine for Nucleus, a RAG-oriented database (domains, tagging, hybrid chunk retrieval, in-process embeddings)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/nucleus-core"
keywords = ["rag", "embeddings", "vector-search", "database", "search"]
categories = ["database-implementations", "text-processing"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
redb.workspace = true
bincode.workspace = true
fastembed = "4"
hnsw_rs = "0.3"
ouroboros = "0.18"
sha2 = "0.10"
rand = "0.9"
# Encryption at rest (opt-in): symmetric AEAD + memory-hard KDF. Both pure-Rust
# (no C toolchain), so the self-contained Windows DLL keeps building unchanged.
# XChaCha20-Poly1305 (256-bit key) is already post-quantum-safe; the passphrase
# is stretched with Argon2id.
chacha20poly1305 = "0.10"
argon2 = "0.5"
# Keyed hash (HMAC-SHA256) used to make sensitive **index keys** (tag/subdomain
# names, metadata key/value, content hashes) opaque on disk while keeping exact
# lookups. Deterministic + keyed, so it hides values yet survives equality joins.
hmac = "0.12"
# Best-effort scrubbing of key material from memory on drop.
zeroize = "1"
parking_lot = "0.12"
serde_json = "1"
# Binary delta (bsdiff) for full-fidelity differential backups.
qbsdiff = "1"
# In-engine document text extraction (transparent multi-format ingestion).
pdf-extract = "0.7"
calamine = "0.26"
html2text = "0.12"
zip = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
# Only pulled in (with a GPU execution provider) when the `gpu` feature is on.
ort = { version = "=2.0.0-rc.9", default-features = false, optional = true }

# Machine-key protection for encryption at rest: DPAPI (CryptProtectData) wraps
# the random key file on Windows. Other OSes use 0600 file permissions (std).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[features]
default = []
# Run embedding inference on the GPU via ONNX Runtime's DirectML provider
# (Windows), falling back to CPU. Requires a compatible GPU/driver at runtime.
gpu = ["dep:ort", "ort/directml", "ort/download-binaries"]
# Run inference on an NVIDIA GPU via ONNX Runtime's CUDA provider, falling back
# to CPU. Requires CUDA/cuDNN at runtime. Mutually compatible with `gpu`.
cuda = ["dep:ort", "ort/cuda", "ort/download-binaries"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmarks (criterion, no harness). Run with `cargo bench -p nucleus-core`.
[[bench]]
name = "search"
harness = false

[[bench]]
name = "ingest"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "rerank"
harness = false
